Fix html overflow jittering

--- a/assets/main.css
+++ b/assets/main.css
@@ -13,6 +13,10 @@ body {
   min-height: 100vh;
 }
 
+html {
+  overflow-x: auto;
+}
+
 body.inspecting {
   overflow: hidden;
 }
